--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-aws-s3": "^1.3.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-dropzone-s3-uploader-multipart": "^1.1.2",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
